# advanced_python_code

./: .gitignore  Dockerfile.nocached  Makefile  Pipfile  README.md  package-lock.json  package.json  pyproject.toml  readme.text  requirements.txt
chapter01/: 02_type_object_class.py
chapter01__all_is_obj/: 01_all_is_object.py  03_category.py
chapter01_all_is_obj/: 01_all_is_object.py  01_integer_obj.py  02_type_object_class.py  03_category.md  03_class_and_func_obj.py  obj.md  object.md
chapter02/: 01_magic_method.py  02_data_model.py  03_magic_methods_list.py
chapter02__magic_method/: 04__init__n__enter__sequence.py
chapter02_magic_method/: 01_container.py  01_magic_method.py  02_callable.py  03_magic_methods_list.py  03_repr_.py  04__init__n__enter__sequence.py  05_pickle.py  magic_method.md
chapter03/: 05_class_object_attr_search_sequence.py  07_private_method.py  12_contextlib.py
chapter03_Class/: 01_duck_category.py  02_abstract_base_class.py  03_isinstance_type.py  04_class_object_params.py  05_class_object_attr_search_sequence.py  06_class_quiet_object_method.py  07_private_method.py  08_self_ex.py  09_super.py  10_DRF_mixin.md  10_DRF_mixin.py  11_with.py  12_contextlib.py  13_dynamic_call_method.py
chapter04_sequence/: 01_sequence_cate.md  01_sequence_cate.py  02_sequence_discipline.md  02_sequence_discipline.py  03_append_extend.py  04_slice_obj.py  05_bisect.py  06_list_application.py  07_list_gen.py
chapter05_set_dict/: 01_dict_abc.py  02_dict_method.py  03_dict_subclass.py  04_set_frozenset.py  05_dict_performance.py
(+192 files in other folders)
