[tool.poetry]
name = "advanced-python-code"
version = "0.1.0"
description = "高级python"
authors = ["danny <540021730@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "advanced_python_code"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
